Fixed the inconsitant spacing and optimized for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+/* src/app/globals.css */
+/* SMOOTH SCROLLING */
+html {
+  scroll-behavior: smooth;
+}
+
+/* TAILWIND */
 @import "tailwindcss";
 
 :root {
